fix: config changed in new hyprland version

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -148,14 +148,13 @@ animations {
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
-# "Smart gaps" / "No gaps when only"
-# uncomment all if you wish to use that.
+# "Smart gaps" / "No gaps when only" - alternative example (commented)
 # workspace = w[tv1], gapsout:0, gapsin:0
 # workspace = f[1], gapsout:0, gapsin:0
-# windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
-# windowrule = rounding 0, floating:0, onworkspace:w[tv1]
-# windowrule = bordersize 0, floating:0, onworkspace:f[1]
-# windowrule = rounding 0, floating:0, onworkspace:f[1]
+# windowrule = border_size 0, match:float 0, match:workspace w[tv1]
+# windowrule = rounding 0, match:float 0, match:workspace w[tv1]
+# windowrule = border_size 0, match:float 0, match:workspace f[1]
+# windowrule = rounding 0, match:float 0, match:workspace f[1]
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -274,8 +273,8 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule
-# windowrule = float,class:^(ghostty)$,title:^(ghostty)$
+# Example windowrule (new 0.53+ syntax)
+# windowrule = float on, match:class ghostty, match:title ghostty
 
 # Ignore maximize requests from apps. You'll probably like this.
 # NEW SYNTAX for 0.53+
@@ -286,12 +285,12 @@ windowrule = suppress_event maximize, match:class .*
 # windowrule = no_focus on, match:class ^$, match:title ^$, match:xwayland true, match:float true, match:fullscreen false, match:pinned false
 # However, this is likely not needed for a minimal config - you can remove it entirely.
 
-## COPIED FROM :  https://wiki.hyprland.org/0.46.0/Configuring/Workspace-Rules/#smart-gaps
-## TODO, i don't know what tv1 means...? (tv1 = "tiled, visible, 1 window")
+## COPIED FROM :  https://wiki.hyprland.org/Configuring/Workspace-Rules/#smart-gaps
+## tv1 = "tiled, visible, 1 window" - activates when only one tiled window is visible
 workspace = w[tv1], gapsout:0, gapsin:0
 workspace = f[1], gapsout:0, gapsin:0
 # NEW SYNTAX for 0.53+
-windowrule = bordersize 0, match:float false, match:onworkspace w[tv1]
-windowrule = rounding 0, match:float false, match:onworkspace w[tv1]
-windowrule = bordersize 0, match:float false, match:onworkspace f[1]
-windowrule = rounding 0, match:float false, match:onworkspace f[1]
+windowrule = border_size 0, match:float 0, match:workspace w[tv1]
+windowrule = rounding 0, match:float 0, match:workspace w[tv1]
+windowrule = border_size 0, match:float 0, match:workspace f[1]
+windowrule = rounding 0, match:float 0, match:workspace f[1]
