--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,17 +1,58 @@
 #preload = /home/henning/src/dotfiles/wallpapers/neonrain.png
 #preload = /home/henning/src/dotfiles/wallpapers/alienlandscape.png
-preload = /home/henning/src/dotfiles/wallpapers/fjord.jpg
+#preload = /home/henning/src/dotfiles/wallpapers/fjord.jpg
 #preload = /home/henning/src/dotfiles/wallpapers/nm.jpeg
 
 # Set for laptop screen
 #wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/neonrain.png
 #wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/alienlandscape.png
-wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/fjord.jpg
+#wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/fjord.jpg
 #wallpaper = eDP-1,/home/henning/src/dotfiles/wallpapers/nm.jpeg
 
 # Set for external HDMI monitor
 #wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/neonrain.png
 #wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/alienlandscape.png
-wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/fjord.jpg
+#wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/fjord.jpg
 #wallpaper = HDMI-A-1,/home/henning/src/dotfiles/wallpapers/nm.jpeg
 
+
+# hyprpaper.conf - NEW SYNTAX for recent hyprpaper versions
+# The old preload/wallpaper syntax has been replaced with wallpaper blocks
+
+# Laptop built-in screen
+wallpaper {
+    monitor = eDP-1
+    path = /home/henning/src/dotfiles/wallpapers/neonrain.jpg
+    fit_mode = cover
+}
+
+# External HDMI monitor
+wallpaper {
+    monitor = HDMI-A-1
+    path = /home/henning/src/dotfiles/wallpapers/neonrain.jpg
+    fit_mode = cover
+}
+
+# Fallback for any other monitors (leave monitor empty)
+wallpaper {
+    monitor =
+    path = /home/henning/src/dotfiles/wallpapers/neonrain.jpg
+    fit_mode = cover
+}
+
+# Alternative wallpapers (commented out):
+# wallpaper {
+#     monitor = eDP-1
+#     path = /home/henning/src/dotfiles/wallpapers/neonrain.png
+#     fit_mode = cover
+# }
+# wallpaper {
+#     monitor = eDP-1
+#     path = /home/henning/src/dotfiles/wallpapers/alienlandscape.png
+#     fit_mode = cover
+# }
+# wallpaper {
+#     monitor = eDP-1
+#     path = /home/henning/src/dotfiles/wallpapers/nm.jpeg
+#     fit_mode = cover
+# }
