fix: config changed in new hyprland version

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -22,21 +22,21 @@
 # Laptop built-in screen
 wallpaper {
     monitor = eDP-1
-    path = /home/henning/src/dotfiles/wallpapers/neonrain.jpg
+    path = /home/henning/src/dotfiles/wallpapers/neonrain.png
     fit_mode = cover
 }
 
 # External HDMI monitor
 wallpaper {
     monitor = HDMI-A-1
-    path = /home/henning/src/dotfiles/wallpapers/neonrain.jpg
+    path = /home/henning/src/dotfiles/wallpapers/neonrain.png
     fit_mode = cover
 }
 
 # Fallback for any other monitors (leave monitor empty)
 wallpaper {
     monitor =
-    path = /home/henning/src/dotfiles/wallpapers/neonrain.jpg
+    path = /home/henning/src/dotfiles/wallpapers/neonrain.png
     fit_mode = cover
 }
 
