--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -4,7 +4,8 @@ wallpaper {
     #path = /home/henning/src/dotfiles/wallpapers/neonrain.png
     #path = /home/henning/src/dotfiles/wallpapers/alienlandscape.png
     #path = /home/henning/src/dotfiles/wallpapers/nm.jpeg
-    path = /home/henning/src/dotfiles/wallpapers/fjord.jpg
+    #path = /home/henning/src/dotfiles/wallpapers/fjord.jpg
+    path = /home/henning/src/dotfiles/wallpapers/tahoe.jpeg
     fit_mode = cover
 }
 
@@ -14,7 +15,8 @@ wallpaper {
     #path = /home/henning/src/dotfiles/wallpapers/neonrain.png
     #path = /home/henning/src/dotfiles/wallpapers/alienlandscape.png
     #path = /home/henning/src/dotfiles/wallpapers/nm.jpeg
-    path = /home/henning/src/dotfiles/wallpapers/fjord.jpg
+    #path = /home/henning/src/dotfiles/wallpapers/fjord.jpg
+    path = /home/henning/src/dotfiles/wallpapers/tahoe.jpeg
     fit_mode = cover
 }
 
@@ -24,6 +26,7 @@ wallpaper {
     #path = /home/henning/src/dotfiles/wallpapers/neonrain.png
     #path = /home/henning/src/dotfiles/wallpapers/alienlandscape.png
     #path = /home/henning/src/dotfiles/wallpapers/nm.jpeg
-    path = /home/henning/src/dotfiles/wallpapers/fjord.jpg
+    #path = /home/henning/src/dotfiles/wallpapers/fjord.jpg
+    path = /home/henning/src/dotfiles/wallpapers/tahoe.jpeg
     fit_mode = cover
 }
